# qcommerce-path-to-profit

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
app/: calibration.json  wargame.py
data/: qcom_financials_fy26.csv
docs/: ARCHITECTURE.md  PERF_REPORT.md  STRATEGY_MEMO.md
qcom/: __init__.py  calibrate.py  cli.py  costs.py  demand.py  desim.py  frontier.py  geo.py  place.py  scenarios.py  sensitivity.py
references/: REFERENCES.md
reports/: results.json
scripts/: make_figures.py  run_experiments.py
tests/: test_calibrate.py  test_costs.py  test_demand.py  test_desim.py  test_frontier.py  test_geo.py  test_place.py  test_sensitivity.py
